src/objects/DF_EventAttendee__c.object
<CustomObject>
    <fields>
        <fullName>DF_Contact__c</fullName>
        <label>DF Contact</label>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>DF EventAttendance</relationshipLabel>
        <relationshipName>DF_EventAttendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DF_EntAtExt_Id__c</fullName>
        <externalId>true</externalId>
        <label>DF EntAtExt Id</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DF_Event__c</fullName>
        <label>DF Event</label>
        <referenceTo>DF_Event__c</referenceTo>
        <relationshipLabel>DF EventAttendees</relationshipLabel>
        <relationshipName>DF_EventAttendees</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EventAttendeeStatus__c</fullName>
        <label>Event Attendee Status</label>
        <picklist>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Attendee Status</label>
        <picklist>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <formula>DF_Event__r.Trainer__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trainer</label>
        <type>Text</type>
    </fields>
    <label>DF EventAttendee</label>
    <nameField>
        <displayFormat>DFE-{0000000}</displayFormat>
        <label>DF EventAttendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DF EventAttendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>